--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Kalam&display=swap"); */
 @import url("https://fonts.googleapis.com/css2?family=Tillana&display=swap");
 
 * {
@@ -6,7 +5,7 @@
 }
 
 :root {
-  --primary: #ffcc66;
+  --primary: #f2c94c;
   --black: #333333;
   --width-break: 600px;
 }
@@ -17,7 +16,7 @@ body {
   color: #333333;
 }
 
-​ nav {
+nav {
   background-color: var(--primary);
   text-align: center;
 }
@@ -45,7 +44,6 @@ button {
   padding: 1rem 2rem;
   font-family: "Tillana", cursive;
   font-size: large;
-  cursor: pointer;
 }
 
 #translate-output {
